[package]
name = "hd-keys-ecdsa"
version = "0.1.0"
edition = "2021"

[dependencies]
cait-sith = { git = "https://github.com/LIT-Protocol/cait-sith.git", features = ["k256"] }
digest = "0.10"
k256 = { version = "0.13", features = ["ecdsa-core", "expose-field", "hash2curve", "sha256"] }
p256 = { version = "0.13", features = ["ecdsa-core", "expose-field", "hash2curve", "sha256"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
digest = "0.10"
rand = "0.8"
vsss-rs = { version = "3.2", features = ["std"] }